<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".user.RegistrationActivity">

    <LinearLayout
        android:id="@+id/ll_welcome_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:src="@drawable/welcome_to_app" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llusername_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layoutDirection="rtl">
    <TextView
        android:id="@+id/tv_username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_username_text"
        android:layout_width="235dp"
        android:layout_height="38dp"
        android:background="@drawable/rounded_edit_txt"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:paddingStart="10dp"
        android:textSize="14sp"
        android:layout_marginTop="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_job_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tv_job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="70dp"
            android:fontFamily="@font/inter"
            android:text="@string/job"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_buttons_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_registration_student"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/button_background_role"
                android:fontFamily="@font/inter"
                android:gravity="center_vertical|start"
                android:layoutDirection="rtl"
                android:stateListAnimator="@null"
                android:text="@string/student"
                android:textAlignment="viewStart"
                android:textDirection="rtl"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_student"
                app:iconGravity="textEnd"
                app:iconPadding="4dp"
                app:iconSize="23dp"
                app:iconTint="@null"
                android:clickable="true"
                android:focusable="true"
                />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_registration_guide"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/button_background_role"
                android:fontFamily="@font/inter"
                android:gravity="center_vertical|start"
                android:layoutDirection="rtl"
                android:stateListAnimator="@null"
                android:text="@string/guide"
                android:textAlignment="viewStart"
                android:textDirection="rtl"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_teacher"
                app:iconGravity="textEnd"
                app:iconPadding="4dp"
                app:iconSize="23dp"
                app:iconTint="@null"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_declaration_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_responsible_dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/declaration_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginEnd="8dp" />

        <CheckBox
            android:id="@+id/chk_declaration"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:buttonTint="#ACE0D0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_warning_need_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_warning_cant_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="20sp"
            android:visibility="gone"
            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_continue_to_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_lets_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_add"
        android:fontFamily="@font/inter"
        android:layoutDirection="rtl"
        android:stateListAnimator="@null"
        android:text="@string/lets_go"
        android:textAlignment="center"
        android:textDirection="rtl"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>
