...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_cancel"
                android:fontFamily="@font/inter"
                android:text="@string/cancel"
                android:textStyle="bold"
...

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_approve"
                android:fontFamily="@font/inter"
                android:text="@string/approve"
                android:textStyle="bold"
...
