<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_lesson_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:layoutDirection="rtl"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStartWithNavigation="0dp"
        android:contentInsetEndWithActions="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:paddingEnd="0dp"
            android:layout_marginEnd="0dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:padding="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tx_activity_header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/inter"
                android:gravity="center_vertical"
                android:text="@string/lesson_view_temp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tx_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                android:textSize="18dp"
                android:text="@string/lesson_check"
                />

            <CheckBox
                android:id="@+id/btn_lesson_check"
                android:button="@null"
                android:background="@drawable/checkbox_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:buttonTint="@null"
                android:layout_marginEnd="8dp"
                android:scaleX="1.25"
                android:scaleY="1.25"
                />

            <ImageButton
                android:id="@+id/imgbtn_like_lesson"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="אהבתי"
                android:src="@drawable/ic_heart_border" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_lesson_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/lesson_name_view" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_lesson_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/lesson_guide_view" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:background="@color/peach"
        android:layout_marginTop="10dp">

        <VideoView
            android:id="@+id/video_lesson"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_peach_background"
        android:padding="8dp">

        <ScrollView
            android:id="@+id/scrl_long_desc"
            android:layout_width="match_parent"
            android:layout_height="291dp"
            android:background="@drawable/rounded_white_background"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_lesson_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:padding="8dp"
                android:text="תיאור השיעור - מתכון + אופן הכנה"
                android:textSize="16sp" />
        </ScrollView>
    </LinearLayout>


</LinearLayout>